other/s-z/unique-ingress-host-and-path/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: unique-ingress-host-and-path
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ingress.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../unique-ingress-host-and-path.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: ingress-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ingress-bad.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: unique-ingress-host-and-path
